--- a/be/package.json
+++ b/be/package.json
@@ -14,9 +14,13 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
+    "eslint": "^8.20.0",
     "express": "^4.18.1",
+    "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "pg": "^8.7.3",
+    "typeorm": "^0.3.7"
   }
 }
