--- a/be/package.json
+++ b/be/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch index.js",
+    "dev": "nodemon --inspect index.js",
     "start": "node index.js"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.6",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.18",
     "pg": "^8.7.3",
