--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,27 +9,19 @@ services:
     ports:
       - 127.0.0.1:8080:8080
     environment:
-      - DATABASE_HOST=db
-      - DATABASE_PORT=5432
-      - DATABASE_NAME=dev
-      - DATABASE_USERNAME=admin
-      - DATABASE_PASSWORD=123456
+      - MONGODB_URL="mongodb://localhost:27017/se"
     image: kse/be
     container_name: be
     networks:
       - kse
-  db:
-    image: postgres:latest
-    environment:
-      - POSTGRES_PASSWORD=123456
-      - POSTGRES_USER=admin
-      - POSTGRES_DB=dev
-      - PGDATA=/var/lib/postgresql/data
-    container_name: postgres
-    ports:
-      - 127.0.0.1:5432:5432
+  mongodb:
+    image: mongo:latest
+    restart: always
     volumes:
-      - /usr/local/kse/postgres:/var/lib/postgresql/data
+      - "/usr/local/kse/db:/data/db"
+    ports:
+      - "27017:27017"
+    container_name: mongodb
     networks:
       - kse
   fe:
