--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -44,7 +44,7 @@ jobs:
         name: Deployment action checkout
       - uses: appleboy/ssh-action@master
         name: Run deploy with SSH
-        if: github.ref == 'refs/heads/master' && github.event_name = 'push'
+        if: github.ref == 'refs/heads/master' && github.event_name == 'push'
         with:
           host: ${{secrets.SERVER_HOST}}
           username: ${{secrets.SERVER_USER}}
