--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -5,13 +5,16 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x, 15.x, 16.x]
     steps:
       - uses: actions/checkout@v3
         name: Build actions checkout
       - uses: actions/setup-node@v3
         name: Build Node.JS with version 16.15.1
         with:
-          node-version: 16.15.1
+          node-version: ${{matrix.node-version}}
       - run: npm install
         name: Npm install package backend working directory
         working-directory: be
