--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -7,12 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x, 15.x, 16.x]
+        node-version: [16.x]
     steps:
       - uses: actions/checkout@v3
         name: Build actions checkout
       - uses: actions/setup-node@v3
-        name: Build Node.JS with version 16.15.1
+        name: Build Node.JS with version 16
         with:
           node-version: ${{matrix.node-version}}
       - run: yarn install --no-lockfile --production --pure-lockfile --frozen-lockfile
