--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -16,10 +16,14 @@ jobs:
         with:
           node-version: ${{matrix.node-version}}
       - run: yarn ci
-        name: Yarn run CI
+        name: Yarn run CI working directory backend
+        working-directory: be
       - run: yarn install --no-lockfile --production --pure-lockfile --frozen-lockfile
         name: Yarn install package backend working directory
         working-directory: be
+      - run: yarn ci
+        name: Yarn run CI working directory frontend
+        working-directory: fe
       - run: yarn install --no-lockfile --production --pure-lockfile --frozen-lockfile
         name: Yarn install package frontend working directory
         working-directory: fe
