--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -51,7 +51,9 @@ jobs:
           password: ${{secrets.SERVER_PASSWORD}}
           port: ${{secrets.SERVER_PORT}}
           script: |
-            export SUDO_ASKPASS=${{secrets.SERVER_PASSWORD}}
+            set -e 
+              SUDO_ASKPASS=${{secrets.SERVER_PASSWORD}}
+            shift
             echo "--- Update package ---"
             sudo -A apt update 
             sudo -A apt upgrade -y
@@ -73,7 +75,7 @@ jobs:
             echo "--- Docker version ---"
             docker version
             echo "--- Check git version ---"
-            if [ -x "$(command git)" ]; then
+            if [ -x "$(where git)" ]; then
               sudo -A apt install git -y
             fi
             if [ -d $HOME/projects/kse ]; then
