--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -50,33 +50,26 @@ jobs:
           username: ${{secrets.SERVER_USER}}
           password: ${{secrets.SERVER_PASSWORD}}
           port: ${{secrets.SERVER_PORT}}
+          command_timeout: 1h
           script: |
-            set -e 
-              SUDO_ASKPASS=${{secrets.SERVER_PASSWORD}}
-            shift
             echo "--- Update package ---"
-            sudo -A apt update 
-            sudo -A apt upgrade -y
+            echo ${{secrets.SERVER_PASSWORD}} | sudo -S yum update -y
             if [ -x "$(command -v docker)" ]; then
               echo "--- Update Docker ---"
-              sudo -A apt-get upgrade docker-engine -y
+              echo ${{secrets.SERVER_PASSWORD}} | sudo -S yum upgrade docker-engine -y
             else
               echo "--- Install Docker Engine"
-              sudo -A apt-get update -y
-              sudo -A apt-get install ca-certificates curl gnupg lsb-release -y
-              sudo -A mkdir -p /etc/apt/keyrings
-              curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo -A gpg --dearmor -o /etc/apt/keyrings/docker.gpg
-              echo \
-              "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
-              $(lsb_release -cs) stable" | sudo -A tee /etc/apt/sources.list.d/docker.list > /dev/null
-              sudo -A apt-get update -y
-              sudo -A apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin -y
+              echo ${{secrets.SERVER_PASSWORD}} | sudo -S yum install -y yum-utils
+              echo ${{secrets.SERVER_PASSWORD}} | sudo -S yum-config-manager \
+                --add-repo \
+                https://download.docker.com/linux/centos/docker-ce.repo
+              echo ${{secrets.SERVER_PASSWORD}} | sudo -S yum install docker-ce docker-ce-cli containerd.io docker-compose-plugin -y
             fi
             echo "--- Docker version ---"
             docker version
             echo "--- Check git version ---"
-            if [ -x "$(where git)" ]; then
-              sudo -A apt install git -y
+            if [ -x "$(command git)" ]; then
+              echo ${{secrets.SERVER_PASSWORD}} | sudo -S yum install git -y
             fi
             if [ -d $HOME/projects/kse ]; then
               if [ -d $HOME/projects ]; then
@@ -88,5 +81,5 @@ jobs:
               cd $HOME/projects/kse
               git pull origin master
             cd $HOME/projects/kse
-            sudo -A docker-compose up --build -d be
-            sudo -A docker-compose up --build -d fe
+            echo ${{secrets.SERVER_PASSWORD}} | sudo -S docker-compose up --build -d be
+            echo ${{secrets.SERVER_PASSWORD}} | sudo -S docker-compose up --build -d fe
