--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -84,13 +84,9 @@ jobs:
             fi
             echo "--- Check git done! --"
             echo "--- Update repo ---"
+            [ -d $HOME/projects ] && mkdir $HOME/projects
             if [ -d $HOME/projects/kse ]; then
               echo "--- Clone code from GitHub ---"
-              if [ -d $HOME/projects ]; then
-                echo "--- Create folder project ---"
-                mkdir $HOME/projects
-                echo "--- Create folder done! ---"
-              fi
               cd $HOME/projects
               git clone https://${{secrets.GITHUB_USERNAME}}:${{secrets.GITHUB_TOKEN}}@github.com/luongvantuit/kse.git
               echo "--- Clone done! ---"
