--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     container_name: be
     networks:
       - kse
+    depends_on:
+      - mongodb
   mongodb:
     image: mongo:latest
     restart: always
