docker compose install sudo chmod

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -73,6 +73,7 @@ jobs:
             echo "--- Check Docker Compose version ---"
             if [ `which docker-compose` -a $? -eq 0 ]; then
               echo ${{secrets.SERVER_PASSWORD}} | sudo -S curl -L "https://github.com/docker/compose/releases/download/1.24.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+              echo ${{secrets.SERVER_PASSWORD}} | sudo -S chmod +x /usr/local/bin/docker-compose
               if ! [ $? -eq 0 ]; then
                 exit 1
               fi
