--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -72,11 +72,12 @@ jobs:
             echo "--- Check docker done! ---"
             echo "--- Check Docker Compose version ---"
             if [ `which docker-compose` -a $? -eq 0 ]; then
-              echo ${{secrets.SERVER_PASSWORD}} | sudo -S curl -L "https://github.com/docker/compose/releases/download/1.24.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-              echo ${{secrets.SERVER_PASSWORD}} | sudo -S chmod +x /usr/local/bin/docker-compose
+              echo "--- Start install Docker Compose ---"
+              echo ${{secrets.SERVER_PASSWORD}} | sudo -S pip install docker-compose
               if ! [ $? -eq 0 ]; then
                 exit 1
               fi
+              echo "--- Install Docker Compose done! ---"
             fi
             echo "--- Check Docker Compose done! ---"
             echo "--- Check git version ---"
