--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -56,7 +56,7 @@ jobs:
             echo ${{secrets.SERVER_PASSWORD}} | sudo -S yum update -y
             echo "--- Update package done! ---"
             echo "--- Check version Docker ---"
-            if [ `which docker` -a $? -eq 0 ]; then
+            if ! [ `which docker` -a $? -eq 0 ]; then
               echo "--- Update Docker ---"
               echo ${{secrets.SERVER_PASSWORD}} | sudo -S yum upgrade docker-engine -y
             else
@@ -71,17 +71,16 @@ jobs:
             docker version
             echo "--- Check docker done! ---"
             echo "--- Check Docker Compose version ---"
-            if [ `docker-compose --version` -a $? -eq 0 ]; then
-              echo "--- Start install Docker Compose ---"
-              echo ${{secrets.SERVER_PASSWORD}} | sudo -S pip install docker-compose
+            if ! [ `which docker-compose` -a $? -eq 0 ]; then
+              echo ${{secrets.SERVER_PASSWORD}} | sudo -S curl -L "https://github.com/docker/compose/releases/download/1.24.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+              echo ${{secrets.SERVER_PASSWORD}} |sudo chmod +x /usr/local/bin/docker-compose
               if ! [ $? -eq 0 ]; then
                 exit 1
               fi
-              echo "--- Install Docker Compose done! ---"
             fi
             echo "--- Check Docker Compose done! ---"
             echo "--- Check git version ---"
-            if [ `which git` -a $? -eq 0 ]; then
+            if ! [ `which git` -a $? -eq 0 ]; then
               echo ${{secrets.SERVER_PASSWORD}} | sudo -S yum install git -y
             fi
             echo "--- Check git done! --"
