--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - 127.0.0.1:9101:8080
     environment:
-      - MONGODB_URL="mongodb://localhost:27017/se"
+      - MONGODB_URL="mongodb://mongodb:27017/kse"
     image: kse/be
     container_name: be
     networks:
