--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,9 @@ services:
       dockerfile: ./.docker/Dockerfile
       args:
         - PORT=8080
+        - MONGODB_URL=mongodb://mongodb:27017/kse
     ports:
       - 127.0.0.1:9101:8080
-    environment:
-      - MONGODB_URL="mongodb://mongodb:27017/kse"
     image: kse/be
     container_name: be
     networks:
