--- a/fe/package.json
+++ b/fe/package.json
@@ -19,7 +19,7 @@
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "6",
     "react-scripts": "^2.1.3",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
@@ -51,6 +51,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.6"
+    "tailwindcss": "^3.1.7"
   }
 }
