fix docker compose workflow

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -70,17 +70,6 @@ jobs:
             echo "--- Docker version ---"
             docker version
             echo "--- Check docker done! ---"
-            echo "--- Check Docker Compose version ---"
-            docker-compose --version
-            if ! [ $? -eq 0 ]; then
-              echo ${{secrets.SERVER_PASSWORD}} | sudo -S curl -L "https://github.com/docker/compose/releases/download/1.24.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-              echo ${{secrets.SERVER_PASSWORD}} | sudo -S chmod +x /usr/local/bin/docker-compose
-              docker-compose --version
-              if ! [ $? -eq 0 ]; then
-                exit 1
-              fi
-            fi
-            echo "--- Check Docker Compose done! ---"
             echo "--- Check git version ---"
             if ! [ `which git` -a $? -eq 0 ]; then
               echo ${{secrets.SERVER_PASSWORD}} | sudo -S yum install git -y
@@ -101,6 +90,6 @@ jobs:
             echo "--- Update done! ---"
             echo "--- Deployment with Docker Compose ---"
             cd $HOME/projects/kse
-            echo ${{secrets.SERVER_PASSWORD}} | sudo -S docker-compose up --build -d be
-            echo ${{secrets.SERVER_PASSWORD}} | sudo -S docker-compose up --build -d fe
+            echo ${{secrets.SERVER_PASSWORD}} | sudo -S docker compose up --build -d be
+            echo ${{secrets.SERVER_PASSWORD}} | sudo -S docker compose up --build -d fe
             echo "--- Deployment done! ---"
