--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -73,6 +73,7 @@ jobs:
             echo "--- Check Docker Compose version ---"
             docker-compose --version
             if ! [ $? -eq 0 ]; then
+              echo "Install Docker Compose"
               echo ${{secrets.SERVER_PASSWORD}} | sudo -S curl -L "https://github.com/docker/compose/releases/download/1.24.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
               echo ${{secrets.SERVER_PASSWORD}} | sudo -S chmod +x /usr/local/bin/docker-compose
               docker-compose --version
@@ -80,6 +81,7 @@ jobs:
             echo "--- Check Docker Compose done! ---"
             echo "--- Check git version ---"
             if ! [ `which git` -a $? -eq 0 ]; then
+              echo "Install Git package"
               echo ${{secrets.SERVER_PASSWORD}} | sudo -S yum install git -y
             fi
             git --version
@@ -98,6 +100,6 @@ jobs:
             echo "--- Update done! ---"
             echo "--- Deployment with Docker Compose ---"
             cd $HOME/projects/kse
-            echo ${{secrets.SERVER_PASSWORD}} | sudo -S docker compose up --build -d be
-            echo ${{secrets.SERVER_PASSWORD}} | sudo -S docker compose up --build -d fe
+            echo ${{secrets.SERVER_PASSWORD}} | sudo -S docker-compose up --build -d be
+            echo ${{secrets.SERVER_PASSWORD}} | sudo -S docker-compose up --build -d fe
             echo "--- Deployment done! ---"
