--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -75,7 +75,7 @@ jobs:
             if ! [ $? -eq 0 ]; then
               echo "Install Docker Compose"
               echo ${{secrets.SERVER_PASSWORD}} | sudo -S curl -L "https://github.com/docker/compose/releases/download/1.24.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-              echo ${{secrets.SERVER_PASSWORD}} | sudo -S chmod +x /usr/local/bin/docker-compose
+              echo ${{secrets.SERVER_PASSWORD}} | sudo -S chmod a+rx /usr/local/bin/docker-compose
               docker-compose --version
             fi
             echo "--- Check Docker Compose done! ---"
