--- a/be/package.json
+++ b/be/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.1",
     "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.6",
+    "mongoose": "^6.5.2",
+    "mongoose-auto-increment": "^5.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.18",
     "pg": "^8.7.3"
