docker nginx build

--- a/fe/.docker/Dockerfile
+++ b/fe/.docker/Dockerfile
@@ -1,11 +1,19 @@
-FROM node:16.15.1
+FROM node:16.15.1 AS Builder
 
 WORKDIR /usr/fe
 
 COPY . .
 
-RUN yarn install --frozen-lockfile 
+RUN yarn install --production --frozen-lockfile
 
-EXPOSE 3000
+RUN yarn build
 
-CMD [ "yarn","start" ]
+FROM nginx:latest
+
+COPY --from=Builder /usr/fe/build /usr/share/nginx/html
+
+COPY ./nginx.conf /etc/nginx/nginx.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
