--- a/be/package.json
+++ b/be/package.json
@@ -13,12 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "eslint": "^8.20.0",
     "express": "^4.18.1",
     "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.2",
+    "mongoose": "^5.11.10",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.18",
     "pg": "^8.7.3"
