--- a/be/package.json
+++ b/be/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.1",
     "eslint": "^8.20.0",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.10",
